--- a/axious-style/package.json
+++ b/axious-style/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.7",
+    "ajax-fetch-and-axios-lab": "file:",
     "axios": "1.3.4",
     "bootstrap": "5.2.3",
     "jquery": "3.6.4",
